Add taxonomy data to rest request Parse taxonomy data in Taxonomy table Update styles Update description

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "reveal-post-data",
 	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"description": "Adds a button in the editor sidebar to show the raw post data.",
+	"author": "codeamp",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
